--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "node": "*"
     },
     "dependencies": {
+        "express": "3.x",
         "grunt": "~0.4.2",
         "grunt-contrib-uglify": "~0.2.2"
     }
